style/fix(global): fazer com que o z-index do header seja 3

--- a/weblibrary/frontend/public/css/global.css
+++ b/weblibrary/frontend/public/css/global.css
@@ -16,6 +16,7 @@ header{
     align-items: center;
     padding-right: 10px;
     height: 65px;
+    z-index: 3;
 }
 
 header h2{
